--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>My page</h1>
+	<h1>My page. My paragraph</h1>
 </body>
 </html>
